--- a/MDAlert/Assets/MDAlert.storyboard
+++ b/MDAlert/Assets/MDAlert.storyboard
@@ -96,7 +96,7 @@
                                                                                     <rect key="frame" x="0.0" y="415" width="315" height="20"/>
                                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                                     <constraints>
-                                                                                        <constraint firstAttribute="height" constant="20" id="Du7-tm-Hzo"/>
+                                                                                        <constraint firstAttribute="height" constant="20" placeholder="YES" id="Du7-tm-Hzo"/>
                                                                                     </constraints>
                                                                                 </view>
                                                                             </subviews>
